feat: seprate the application into various libraries
Previously I thought I could just make the whole app using just 1 cargo
project, but then I thought of making seprate frameworks for each part
of the project like `web` for backend server etc etc
Other Changes:
- Containerize the application using `dev.dockerfile` and `compose.yaml`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
+workspace = { members = ["web"] }
+
 [package]
-name = "web_app_from_scratch_rs"
+name = "web_app_from_scratch"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-uuid = { version = "1.8.0", features = ["v4"] }
+web = { path = "web" }
