docs: rename project to browzer and add proper documentation
Sooo many changes!
`rust_web_app_from_scratch` was getting really lame, so I renamed the
whole project to `browzer`, Now the `web` crate becomes `browzer_web`
Also, I added proper documentation to every single thing in the project
and now this documentation will be visible in the code completion and
suggesstions if someone is using them, also we can use `cargo doc` in
order to generate HTML docs for the whole project now.

Other Changes:-
- move `HttpMethod` and `HttpStatusCode` enums to `browzer_web::utils`
module
- instead of importing the whole modules into various parst of the
`browzer_web` we just import the modules and use them as prefixes to
access module related stuff
- edit the `dev.dockerfile` to install and configure tmux, it is a very
powerfull tool which I really like so I thought why not install it in
the container as well

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
-workspace = { members = ["web"] }
+workspace = { members = ["browzer_web"] }
 
 [package]
-name = "web_app_from_scratch"
+name = "browzer"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-web = { path = "web" }
+browzer_web = { path = "browzer_web" }
