--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,10 @@
 version: "3.8"
 
-name: rust_web_app_from_scratch
+name: browzer
 
 services:
-  rust_web_app_from_scratch:
-    container_name: rust_web_app_from_scratch
+  browzer:
+    container_name: browzer
     build:
       context: .
       dockerfile: dev.dockerfile
