feat(browzer_web/context): add method to fetch form data from request body
I added the `context.form_value` method, which takes in a string
representing the `key` of the form value that you want as input, and
returns the value as output, this function also checks if the form data
in the request body is valid or not

Other Changes:
- add a simple utility command into `dev.dockerfile`, to be ran when
starting the container, it installs the `fuser` command which is very
helpful sometimes
- I accidentally put `GET` method instead of `PATCH` and `DELETE`
methods in their respective method functions when adding the new handler
route to registered routes(it caused unimaginable pain)

--- a/browzer_web/Cargo.toml
+++ b/browzer_web/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serde_urlencoded = "0.7"
 thiserror = "1.0"
 maplit = "1.0"
 uuid = { version = "1.8.0", features = ["v4"] }
