--- a/browzer_web/Cargo.toml
+++ b/browzer_web/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 [dependencies]
 serde_urlencoded = "0.7"
 thiserror = "1.0"
-maplit = "1.0"
 uuid = { version = "1.8.0", features = ["v4"] }
+chrono = "0.4"
